--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
-.scrollbar-hide::-webkit-scrollbar {
+/* .scrollbar-hide::-webkit-scrollbar {
     display: none;
-}
+} */
 
 /* For IE, Edge and Firefox */
-.scrollbar-hide {
+/* .scrollbar-hide {
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
+    /* scrollbar-width: none;  Firefox */
+/* } */ 
